--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "axios": "^1.7.9",
     "flowbite": "^2.5.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
