--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookies": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
