--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@eslint/js": "^9.15.0",
     "@types/actioncable": "^5.2.11",
     "@types/js-cookie": "^3.0.6",
+    "@types/node": "^22.13.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
