--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite preview --port 3006 --host",
     "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
