--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "actioncable": "^5.2.8-1",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
