--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^11.0.5"
   },
@@ -32,6 +33,7 @@
     "@types/node": "^22.13.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-input-mask": "^3.0.6",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
