--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "flowbite": "^2.5.2",
+    "framer-motion": "^12.6.3",
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
     "react": "^18.3.1",
@@ -24,7 +25,8 @@
     "react-icons": "^5.4.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.0.2",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
